# fypro

./: .gitmodules  README.rst  activate.sh
.github/workflows/: ci.yml
src/fypro/: __init__.py  fypro_script.py
template/simple/: CMakeLists.txt  config.cmake
template/simple/app/: CMakeLists.txt  {project_name_lower}client.f90
template/simple/cmake/export/: simple-config.cmake.in  simple.pc.in
template/simple/lib/: CMakeLists.txt  simple.f90
template/simple/prog/: CMakeLists.txt  simpleclient.f90
template/simple/src/: CMakeLists.txt  {project_name_lower}.f90
template/simple/test/: CMakeLists.txt
template/simple/test/export/cmake/: CMakeLists.txt  test_export.f90
template/simple/test/export/pkgconfig/: test_export.f90  test_export.sh
template/simple/test/fytest/: CMakeLists.txt  test_trivial.fpp
template/simple/test/lib/: CMakeLists.txt  test_trivial.fpp
test/: test_new_project.sh
